# Coeditor

./: .env  .gitignore  .pre-commit-config.yaml  DevGuide.md  Pipfile  README.md  diff.txt  install-all.bash  pyproject.toml  requirements.txt  setup.py
data/: coeditor_link.pkl
data/code/: bad_code_1.py  good_code_1.py
notebooks/: analyze_data.ipynb  code_completion_format.ipynb  code_completion_inspect.ipynb  download_data.ipynb  multi_round_inspect.ipynb  profile_analysis.ipynb  profile_model.ipynb  run_api.ipynb  run_open_ai_model.ipynb
scripts/: analyze_data.ipynb  code_completion_eval.py  code_completion_format.ipynb  download_data.ipynb  install-deps-linux.sh  multi_round_eval.ipynb  multi_round_eval.py  prepare_data.py  profile_analysis.ipynb  profile_model.ipynb  run_api.ipynb  scratch.ipynb  single_round_eval.py  start_server.py  start_training.sh  train_model.py
scripts/SPOT/: eval_func_model.py  train_model.py
scripts/archive/: test_retrieval_model.ipynb  train_dagger.py
scripts/coeditor/: analyze_data.ipynb  download_data.ipynb  inspect_model.ipynb  prepare_data.ipynb  prepare_data.py  profile_analysis.ipynb  profile_model.ipynb  run_api.ipynb  start_server.py  start_training.sh  train_model.py  train_retrieval_model.py
src/coeditor/: _utils.py  api.py  c3problem.py  change.py  code_change.py  common.py  ctx_change_encoder.py  dataset.py  encoders.py  encoding.py  git.py  history.py  model.py  retrieval_model.py  scoped_changes.py  service.py  tk_array.py  usage_analysis.py
tests/: test_analysis.py  test_edits.py  test_scoped_change.py
(+33 files in other folders)
